# polymarket-trading-bots

./: .gitignore  Cargo.toml  Makefile  README.md
polymarket-market-maker-bot/: .gitignore  Cargo.toml  Dockerfile  README.md  config.env
polymarket-market-maker-bot/config/: amm.json  bands.json
polymarket-market-maker-bot/src/: app.rs  args.rs  clob_api.rs  constants.rs  contracts.rs  ct_helpers.rs  gas.rs  lifecycle.rs  main.rs  market.rs  metrics.rs  order.rs  orderbook.rs  price_feed.rs  strategy.rs  token.rs  utils.rs
polymarket-market-maker-bot/src/strategies/: amm.rs  amm_strategy.rs  bands.rs  bands_strategy.rs  base_strategy.rs  mod.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/markets/: mod.rs  soccer_markets.rs  tennis_markets.rs
src/trading/: mod.rs
