[package]
name = "poly-market-maker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = { version = "2.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
prometheus = "0.13"
hex = "0.4"
base58 = "0.2"
sha3 = "0.10"
rlp = "0.5"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
rand = "0.8"
num-bigint = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"

